Pack200 - removed usage of a Java 5-only method
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/trunk@675957 13f79535-47bb-0310-9956-ffa450edef68